packages/portal-style/src/components/_subscribe.scss
.dp-po-subscribe {
  $self: '.dp-po-subscribe';

  .dropdown-menu {
    border-color: $brand-primary;
    padding: 0;
  }

  &-btn {
    text-align: left;
    position: relative;
    background: $white;
    padding: 4px 10px;
    color: $brand-primary;
    display: flex;
    align-items: center;
    border: 2px solid $grey-light;
    border-radius: 4px;
    outline: none;
    min-width: 145px;
    @include typo($s14, 600, 'body');

    .dp-po-icon {
      margin-right: 10px;
      font-size: 22px;
      line-height: 0;

      .fa-check {
        position: absolute;
        right: 10px;
        top: 9px;
        color: $success;
        font-size: 14px;
      }
    }

    &:hover {
      background: $brand-primary;
      color: $white;
      border-color: $brand-primary;

      .dp-po-icon {
        .fa-check {
          display: block;
          color: $white;
        }

        svg .fa-primary,
        svg .fa-secondary {
          fill: $white;
        }
      }
    }
  }

  &-activebtn {
    border-color: $grey-dark;
    color: $grey-dark;

    .dp-po-icon {
      .fa-check {
        display: block;
        color: $success;
      }
    }

    &:hover {
      background: $brand-primary;
      color: $white;
      border-color: $brand-primary;

      .dp-po-icon {
        .fa-check {
          display: block;
          color: $white;
        }

        svg .fa-primary,
        svg .fa-secondary {
          fill: $white;
        }
      }
    }
  }

  .show {
    #{$self}-btn {
      background: $brand-primary;
      color: $white;
      border-color: $brand-primary;

      .dp-po-icon {
        color: $white;

        .fa-check {
          display: block;
          color: $white;
        }

        svg .fa-primary,
        svg .fa-secondary {
          fill: $white;
        }
      }
    }
  }

  .dropdown-item {
    position: relative;
    @include typo($s17, 400, 'head');
    display: flex;
    align-items: center;
    margin: 15px 20px;
    padding: 0;
    width: auto;

    .dp-po-icon {
      font-size: 20px;
      margin: 0 10px 0 0;
      color: $grey-dark;

      .fa-check {
        position: absolute;
        right: 0;
        top: 0;
        display: none;
      }
    }

    &:hover,
    &.active {
      background: none;
      color: $brand-primary;

      .dp-po-icon {
        color: $brand-primary;

        .fa-check {
          display: block;
          color: $success;
        }
      }
    }

    &.disabled {
      color: $grey;

      i {
        color: $grey;
      }
    }

    &#{$self}-manage {
      color: $brand-primary;
      @include typo($s14, 600, 'body');

      &:hover {
        text-decoration: underline;
      }
    }
  }

  &-divider {
    display: block;
    height: 1px;
    width: 100%;
    background: $grey;
  }

  &-large {
    #{$self}-btn {
      width: 100%;
      @include typo($s23, 400, 'head');
      padding: 8px 20px;
      border: 1px solid $brand-primary;

      .dp-po-icon {
        font-size: $s23;

        .fa-check {
          right: 20px;
          display: none;
          font-size: 24px;
        }
      }

      &:hover {
        .dp-po-icon {
          .fa-check {
            display: block;
            color: $white;
          }
        }
      }
    }

    #{$self}-activebtn {
      border-color: $grey-dark;
      color: $grey-dark;

      .dp-po-icon {
        .fa-check {
          display: block;
          color: $success;
        }

        svg .fa-primary,
        svg .fa-secondary {
          fill: $grey-dark;
        }
      }

      &:hover {
        background: $brand-primary;
        color: $white;
        border-color: $brand-primary;

        .dp-po-icon {
          .fa-check {
            display: block;
            color: $white;
          }

          svg .fa-primary,
          svg .fa-secondary {
            fill: $white;
          }
        }
      }
    }

    .dropdown-menu {
      width: 100%;
    }

    .dropdown-item {
      .dp-po-icon {
        font-size: 24px;
      }
    }
  }
}

